--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -11,11 +11,14 @@
 <body>
 	<div class="container">
 		<h1>Search Results</h1>
-		{% for song in results %}
+		{% for i in range(numresults) %}
 		<div class="songinqueuecontainer">
-			<p class="queuesongname">{{song['Title']}}</p>
-			<img class="currentsongimg" src="{{song['Thumbnail']}}"></img>
-			<p class="currentsongtitle">{{song['Artist']}}</p>
+			<p class="queuesongname">{{results[i]['Title']}}</p>
+			<img class="currentsongimg" src="{{results[i]['Thumbnail']}}"></img>
+			<p class="currentsongtitle">{{results[i]['Artist']}}</p>
+			<form autocomplete="off" method="POST">
+				<input type="submit" name="adsn{{i}}" value="Add Song"></input>
+			</form>
 		</div>
 		{% endfor %}
 	</div>
