--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,12 @@
 
 <body>
 	<div class="container">
+		<h1>Site Name (Demo)</h1>
+		<p>
+		hi
+		</p>
+	</div>
+	<div class="container">
 		<h1>Current Song</h1>
 		<img class="currentsongimg" src="{{imgurl}}"></img>
 		<div class="currentsonginfo">
