--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -10,17 +10,19 @@
 
 <body>
 	<div class="container">
+		<form autocomplete="off" method="POST">
 		<h1>Search Results</h1>
+		<h2>Bid Here</h2>
+		<input type="text" name="bidamt" placeholder="bid amount"></input>
 		{% for i in range(numresults) %}
 		<div class="songinqueuecontainer">
 			<p class="queuesongname">{{results[i]['Title']}}</p>
 			<img class="currentsongimg" src="{{results[i]['Thumbnail']}}"></img>
 			<p class="currentsongtitle">{{results[i]['Artist']}}</p>
-			<form autocomplete="off" method="POST">
 				<input type="submit" name="adsn{{i}}" value="Add Song"></input>
-			</form>
 		</div>
 		{% endfor %}
+		</form>
 	</div>
 
 	<!-- prevents form resubmition on page reload -->
